<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_gradient"
    android:paddingRight="20dp"
    android:paddingLeft="20dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_result_sleep_calculate"
            android:textColor="@color/white"
            android:alpha="0.7"
            android:typeface="serif"
            android:gravity="center"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tv_body_result_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body_result_sleep_by_time"
            android:textColor="@color/white"
            android:alpha="0.7"
            android:typeface="serif"
            android:gravity="center"
            android:layout_gravity="center"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_recalculate_sleep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/pale_turquoise"
            android:text="@string/recalculate"
            android:textColor="@color/navy"
            android:textStyle="bold"
            android:typeface="serif"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/bottom_result_sleep_calculate"
            android:textColor="@color/white"
            android:alpha="0.7"
            android:typeface="serif"
            android:gravity="center"
            android:layout_gravity="center"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>