<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_gradient">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/want_to_wake_up_at"
            android:textSize="25sp"
            android:typeface="serif"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"/>
        <TimePicker
            android:id="@+id/time_picker_sleep_calculator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:timePickerMode="spinner"
            android:theme="@style/MyTimePickerStyle"/>
        <Button
            android:id="@+id/btn_calculate_sleep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/pale_turquoise"
            android:text="@string/calculate"
            android:textColor="@color/navy"
            android:textStyle="bold"
            android:typeface="serif"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/want_to_sleep_now"
            android:textSize="25sp"
            android:typeface="serif"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>
        <Button
            android:id="@+id/btn_sleep_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/pale_turquoise"
            android:text="@string/sleep_now"
            android:textColor="@color/navy"
            android:textStyle="bold"
            android:typeface="serif"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>