<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_bottom_sheet">

    <ImageView
        android:id="@+id/img_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_round_remove"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="-5dp"/>
    <TextView
        android:id="@+id/title_sheet_set_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_alarm_label"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="-5dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_round"
        tools:ignore="MissingConstraints" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enter_label"
        app:startIconDrawable="@drawable/edit"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/title_sheet_set_alarm">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/background_button_cancel"
            android:text="@string/cancel"
            android:layout_marginEnd="10dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:background="@drawable/background_button_dialog_unblock"
            android:layout_weight="0.5"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>