<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_dialog_blocked">
    <TextView
        android:id="@+id/tv_title_blocked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_blocked_list"
        android:textColor="@color/white"
        android:padding="16dp"
        android:textSize="18sp"
        android:gravity="center"
        android:background="@color/navy"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_blocked"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_audio_dialog"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/test_image"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/RoundedSquare"
            android:adjustViewBounds="true"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/tv_name_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/img_audio_dialog"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:background="@android:color/transparent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/item_audio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_bottom_sheet_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:background="@drawable/background_button_cancel"
            android:text="@string/cancel"
            android:layout_marginEnd="10dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_dialog_unblocked"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/unblock"
            android:textColor="@color/white"
            android:background="@drawable/background_button_dialog_unblock"
            android:layout_weight="0.7"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>