<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_gradient">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_current_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="70sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_current_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_current_time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@id/tv_current_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <at.markushi.ui.CircleButton
        android:id="@+id/btn_disable_alarm"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/close_40dp_navy"
        app:cb_color="@color/pale_turquoise"
        app:cb_pressedRingWidth="20dp"
        android:layout_marginBottom="60dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toTopOf="@id/btn_snooze_10_mins"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_snooze_10_mins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snooze_10_mins"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp"
        android:backgroundTint="@android:color/transparent"
        android:background="?attr/selectableItemBackground"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>