<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_bottom_sheet">

    <ImageView
        android:id="@+id/img_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_round_remove"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="-5dp"/>
    <TextView
        android:id="@+id/title_sheet_set_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="-5dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_round"
        app:layout_constraintBottom_toTopOf="@id/rcv_sheet_set_alarm"
        tools:ignore="MissingConstraints" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_sheet_set_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintHeight_max="500dp"
        app:layout_constrainedHeight="true"
        android:overScrollMode="never"
        app:layout_constraintTop_toBottomOf="@id/title_sheet_set_alarm"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rcv_sheet_set_alarm">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_bottom_sheet_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/background_button_cancel"
            android:text="@string/cancel"
            android:layout_marginEnd="10dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save_alarm_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/white"
            android:background="@drawable/background_button_dialog_unblock"
            android:layout_weight="0.5"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>